--- a/index.html
+++ b/index.html
@@ -4437,13 +4437,13 @@
                                     <path class="cls-38" d="m776.62,102.99h11.72l3.39,3.51v8.96l-2.89,2.99h-9.19l-.89.9v4.3h12.72l.25.25v3.89l-.25.27h-17.89l-.25-.27v-10.78l2.89-2.98h9.19l.89-.92v-4.93l-1-1.04h-5.55l-1,1.04v2.07l-.25.27h-4.91l-.25-.27v-3.76l3.28-3.51Z" />
                                     <path class="cls-38" d="m797.65,102.99h11.57l3.41,3.73v17.47l-3.56,3.88h-11.27l-3.56-3.73v-17.62l3.41-3.73Zm1.77,5.67v13.74l1.19,1.3h5.5l1.34-1.45v-13.59l-1.49-1.45h-5.2l-1.34,1.45Z" />
                                 </g>
-                                <g class="watch_pm watch_mer" data-icon="theme" hidden="false">
+                                <g class="watch_pm watch_mer" data-icon="theme" data-icon-theme="light" hidden="true">
                                     <path d="m826.06,110.51h10.99l2.61,2.61v6.23l-2.61,2.6h-7.24v5.9l-.23.22h-3.51l-.22-.22v-17.11l.22-.22Zm3.74,2.83v5.77h4.98l.9-.9v-3.97l-.9-.9h-4.98Z" />
                                     <path
                                         d="m841.83,110.51h5.66c.23.19,1.59,4.79,4.08,13.82.16,0,1.11-3.17,2.83-9.51.84-2.87,1.33-4.31,1.47-4.31h5.66l.1.12h.12l.05,17.21-.39.22h-3.29l-.22-.22v-14.04h-.12c-2.64,9.51-4.08,14.26-4.31,14.26h-4.07c-.23,0-1.66-4.79-4.31-14.38h-.12v14.16l-.22.22h-2.95l-.22-.22v-17.11l.22-.22Z"
                                     />
                                 </g>
-                                <g class="watch_am watch_mer" data-icon="theme" hidden="true">
+                                <g class="watch_am watch_mer" data-icon="theme" data-icon-theme="dark" hidden="false">
                                     <path d="m834.72,110.51c.24,0,1.9,5.81,4.98,17.44l-.12.12h-3.67c-.21-.12-.61-1.43-1.19-3.91h-5.69c-.52,2.61-.88,3.91-1.07,3.91h-3.32l-.23-.23,4.74-17.2.12-.12h5.45Zm-2.84,2.49l-2.01,8.06h4.15l-2.02-8.06h-.12Z" />
                                     <path
                                         d="m841.83,110.51h5.66c.23.19,1.59,4.79,4.08,13.82.16,0,1.11-3.17,2.83-9.51.84-2.87,1.33-4.31,1.47-4.31h5.66l.1.12h.12l.05,17.21-.39.22h-3.29l-.22-.22v-14.04h-.12c-2.64,9.51-4.08,14.26-4.31,14.26h-4.07c-.23,0-1.66-4.79-4.31-14.38h-.12v14.16l-.22.22h-2.95l-.22-.22v-17.11l.22-.22Z"
