icon sizes, buble position, and footer height

--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
         </div>
         <section class="section about_section" id="about_section">
             <div class="section_content content flex flex_responsive">
-                <div class="about_salute">
+                <div class="about_salute responsive_content">
                     <div class="about_animation">
                         <div class="swipe_animation_container_full">
                             <h1 class="title_salute animation_up" id="title_salute" data-change data-es="Hola, soy" data-en="Hi, I'm">Hola, soy</h1>
@@ -723,10 +723,37 @@
                         <span data-change data-es=", me gusta hacer proyectos originales y unicos." data-en=", I like to do original and unique projects">, ya que me gustan los proyectos interactivos y diferentes.</span>
                     </p>
                 </div>
-                <div class="about_img">
+                <div class="about_img responsive_content">
                     <picture>
                         <img src="./src//img//photos/johnFoto.png" />
                     </picture>
+                    <div class="social_btns_container">
+                        <button type="button" class="icon_container animated_social_btn href_btn" data-href="https://www.behance.net/jg_john_design">
+                            <svg class="icon_svg social_icon_svg behance_icon_svg" data-name="behance_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
+                                <title>Behance</title>
+                                <path
+                                    class="cls-1"
+                                    d="M10.1,11.63a2.44,2.44,0,0,1,2.12,1,3.78,3.78,0,0,1,.78,2v1A5.31,5.31,0,0,1,12.5,18a3.35,3.35,0,0,1-1.25,1.45,6.41,6.41,0,0,1-1.47.68,6.32,6.32,0,0,1-1.23.27H0V4.28H8.05a4.52,4.52,0,0,1,3.17,1.1,4,4,0,0,1,1.23,3.19,3.28,3.28,0,0,1-.58,2,2.16,2.16,0,0,1-1.18.92l-.59.11M3.55,7.13v3.6H7.8a1.32,1.32,0,0,0,1-.38,2.35,2.35,0,0,0,.35-1.52,2.19,2.19,0,0,0-.27-1.18.94.94,0,0,0-.58-.47l-.25,0H3.55m4.3,10.39c1.23,0,1.85-.69,1.85-2.1a2.54,2.54,0,0,0-.4-1.54,1.27,1.27,0,0,0-.8-.6l-.45,0H3.55v4.29h4.3M19.54,8.38a5.63,5.63,0,0,1,2.95.72,4,4,0,0,1,1.67,1.75,8.65,8.65,0,0,1,.68,2.05A7,7,0,0,1,25,14.62l0,.76h-8a2.86,2.86,0,0,0,.68,2,1.93,1.93,0,0,0,1.37.7l.65,0a3.13,3.13,0,0,0,1.77-.42,1.3,1.3,0,0,0,.67-.83l.05-.45h2.7a3.75,3.75,0,0,1-1.32,3.11,4.55,4.55,0,0,1-2.62,1.09l-1.35,0a6.85,6.85,0,0,1-3.05-.62,4.14,4.14,0,0,1-1.79-1.55,8.67,8.67,0,0,1-.83-1.83,5.36,5.36,0,0,1-.27-1.5v-.64c0-.17,0-.4,0-.68A7.92,7.92,0,0,1,14,12.4a6.37,6.37,0,0,1,.9-1.87,5.32,5.32,0,0,1,1.8-1.48,5.85,5.85,0,0,1,2.87-.67M22,13.22c0-.07,0-.15,0-.27s-.07-.32-.15-.6a3.21,3.21,0,0,0-.33-.75,1.78,1.78,0,0,0-.7-.6,2.28,2.28,0,0,0-1.15-.28,2.5,2.5,0,0,0-1.74.63,2.42,2.42,0,0,0-.85,1.27l-.16.6H22m.65-8V7.18h-6.4V5.23h6.4"
+                                />
+                            </svg>
+                        </button>
+                        <button type="button" class="icon_container animated_social_btn href_btn" data-href="https://github.com/JohnMcKrazy">
+                            <svg class="icon_svg social_icon_svg gitHub_icon_svg" data-name="gitHub_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
+                                <title>GitHub</title>
+                                <path
+                                    class="cls-1"
+                                    d="M12.5.31A12.5,12.5,0,0,0,8.55,24.67c.62.12.85-.27.85-.6s0-1.28,0-2.33c-3.48.76-4.22-1.47-4.22-1.47a3.26,3.26,0,0,0-1.38-1.83c-1.14-.78.08-.76.08-.76A2.63,2.63,0,0,1,5.79,19a2.66,2.66,0,0,0,3.64,1,2.68,2.68,0,0,1,.79-1.67C7.44,18,4.52,17,4.52,12.16A4.85,4.85,0,0,1,5.81,8.8a4.49,4.49,0,0,1,.12-3.31S7,5.16,9.37,6.77a12.56,12.56,0,0,1,3.13-.42,12.56,12.56,0,0,1,3.13.42C18,5.16,19.07,5.49,19.07,5.49a4.49,4.49,0,0,1,.12,3.31,4.84,4.84,0,0,1,1.28,3.36c0,4.8-2.92,5.85-5.7,6.16a3,3,0,0,1,.84,2.32c0,1.67,0,3,0,3.43s.23.72.86.6A12.5,12.5,0,0,0,12.5.31Z"
+                                />
+                                <path class="cls-2" d="M4.73,18.26c0,.06-.12.08-.21,0s-.14-.12-.11-.18.12-.09.21,0,.15.12.11.19Zm-.15-.12" />
+                                <path class="cls-2" d="M5.24,18.82c-.06.06-.18,0-.25-.06a.18.18,0,0,1,0-.26c.06-.05.17,0,.26.06a.19.19,0,0,1,0,.26Zm-.12-.13" />
+                                <path class="cls-2" d="M5.73,19.54c-.07.05-.2,0-.28-.11a.22.22,0,0,1,0-.3c.07-.05.2,0,.28.11s.07.25,0,.3Zm0,0" />
+                                <path class="cls-2" d="M6.41,20.24a.24.24,0,0,1-.32,0C6,20.09,6,19.94,6,19.87s.21-.06.32.05a.24.24,0,0,1,.07.32Zm0,0" />
+                                <path class="cls-2" d="M7.34,20.64c0,.1-.17.14-.31.1s-.24-.16-.21-.26.17-.14.32-.1.23.16.2.26Zm0,0" />
+                                <path class="cls-2" d="M8.36,20.71c0,.11-.11.19-.26.2s-.27-.08-.27-.19.11-.19.26-.19.27.08.27.18Zm0,0" />
+                                <path class="cls-2" d="M9.32,20.55c0,.1-.09.21-.24.23s-.28,0-.3-.13.09-.21.24-.23.28,0,.3.13Zm0,0" />
+                            </svg>
+                        </button>
+                    </div>
                 </div>
             </div>
         </section>
@@ -998,9 +1025,9 @@
         </section>
 
         <footer class="section legals_section" id="legals_section">
-            <div class="section_content footer_content">
-                <div class="content flex flex_responsive">
-                    <div class="swipe_animation_illustration desk_icon_container">
+            <div class="content footer_content">
+                <div class="flex flex_responsive">
+                    <div class="swipe_animation_illustration desk_icon_container responsive_content">
                         <!-- ! DESK ICON START -->
                         <svg class="deskwork_icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000">
                             <g class="desk_floor">
@@ -4965,7 +4992,7 @@
 
                         <!-- ! DESK ICON END -->
                     </div>
-                    <div class="lebels_container">
+                    <div class="lebels_container responsive_content">
                         <div class="made_content">
                             <span class="copy_rights">@JohnKrazy - 2024 - <span data-change data-es="Derechos reservados" data-en="Rights Reserved">Derechos reservados</span></span>
                             <div class="btns_container">
