whatsapp links change, legals height remove, icons padding change

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <path class="cls-2" d="M9.32,20.55c0,.1-.09.21-.24.23s-.28,0-.3-.13.09-.21.24-.23.28,0,.3.13Zm0,0" />
                         </svg>
                     </button>
-                    <button type="button" class="icon_container animated_social_btn href_btn" data-href="https://api.whatsapp.com/app?phone=525614207862&text=Necesito información sobre tus servicios">
+                    <button type="button" class="icon_container animated_social_btn href_btn" data-href="https://wa.me/525614207862?text=Necesito%20información%20sobre%20tus%20servicios.">
                         <svg class="icon_svg social_icon_svg wa_icon_svg" data-name="wa_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
                             <title>WhatsApp</title>
                             <path
@@ -330,7 +330,7 @@
                         </svg>
                     </div>
                 </button>
-                <button type="button" class="phone_social_btn phone_menu_btn action_menu extra_btn href_btn" data-href="https://api.whatsapp.com/app?phone=525614207862&text=Necesito información sobre tus servicios">
+                <button type="button" class="phone_social_btn phone_menu_btn action_menu extra_btn href_btn" data-href="https://wa.me/525614207862?text=Necesito%20información%20sobre%20tus%20servicios.">
                     <div class="icon_container">
                         <svg class="social_icon_svg wa_icon_svg icon_svg" data-name="wa_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                             <title>WhatsApp</title>
@@ -457,7 +457,7 @@
                         </svg>
                     </div>
                 </button>
-                <button type="button" class="social_menu_btn social_btn href_btn" data-href="https://api.whatsapp.com/app?phone=525614207862&text=Necesito información sobre tus servicios">
+                <button type="button" class="social_menu_btn social_btn href_btn" data-href="https://wa.me/525614207862?text=Necesito%20información%20sobre%20tus%20servicios.">
                     <div class="icon_container">
                         <svg class="icon_svg social_icon_svg wa_icon_svg" data-name="wa_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
                             <title>WhatsApp</title>
@@ -753,7 +753,7 @@
                                 <path class="cls-2" d="M9.32,20.55c0,.1-.09.21-.24.23s-.28,0-.3-.13.09-.21.24-.23.28,0,.3.13Zm0,0" />
                             </svg>
                         </button>
-                        <button type="button" class="icon_container animated_social_btn href_btn" data-href="https://api.whatsapp.com/app?phone=525614207862&text=Necesito información sobre tus servicios">
+                        <button type="button" class="icon_container animated_social_btn href_btn" data-href="https://wa.me/525614207862?text=Necesito%20información%20sobre%20tus%20servicios.">
                             <svg class="icon_svg social_icon_svg wa_icon_svg" data-name="wa_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
                                 <title>WhatsApp</title>
                                 <path
@@ -1018,7 +1018,7 @@
                         <p class="form_response"></p>
                     </div>
                 </form>
-                <button type="button" class="btn whatsapp_btn animated_social_btn href_btn" data-href="https://api.whatsapp.com/app?phone=525614207862&text=Necesito información sobre tus servicios">
+                <button type="button" class="btn whatsapp_btn animated_social_btn href_btn" data-href="https://wa.me/525614207862?text=Necesito%20información%20sobre%20tus%20servicios.">
                     <span class="label_btn">WhatsApp</span>
                     <span class="icon_container">
                         <svg class="icon_svg social_icon_svg wa_icon_svg" data-name="wa_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
