box-shadow style in bubbles

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <meta name="keywords" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="" />
+        <script type="module" src="./src/js/index.js" async defer></script>
+
         <script type="module" charset="utf-8" src="./src/js/utils.js" defer></script>
         <link rel="icon" type="image/svg" href="./src/img/personal_logos/johnK_tab_icon.svg" />
         <link rel="image_src" href="./src/img/desk.png" />
@@ -5084,5 +5086,5 @@
         </div>
     </template>
 
-    <script type="module" src="./src/js/index.js" async defer></script>
+    <!-- <script type="module" src="./src/js/index.js" async defer></script> -->
 </html>
