--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,7 @@
                             <span class="label_btn" data-change data-es="Enviar" data-en="Send">Enviar</span>
                         </button>
                     </div>
-                    <div class="form_response_container form_response_container">
+                    <div class="form_response_container">
                         <p class="form_response"></p>
                     </div>
                 </form>
