removed whatsapp btns

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="info">
                 <h3 class="name">Jonathan Grajeda</h3>
                 <p class="place" change es="México CDMX" en="Mexico City">México CDMX</p>
-                <div class="icons_container">
+                <div class="btns_container">
                     <button type="button" class="icon_container animated_social_btn href_btn" link-ref="https://www.behance.net/jg_john_design">
                         <svg class="icon_svg social_icon_svg behance_icon_svg" name="behance_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                             <title>Behance</title>
@@ -75,15 +75,6 @@
                             <path class="cls-2" d="M7.34,20.64c0,.1-.17.14-.31.1s-.24-.16-.21-.26.17-.14.32-.1.23.16.2.26Zm0,0" />
                             <path class="cls-2" d="M8.36,20.71c0,.11-.11.19-.26.2s-.27-.08-.27-.19.11-.19.26-.19.27.08.27.18Zm0,0" />
                             <path class="cls-2" d="M9.32,20.55c0,.1-.09.21-.24.23s-.28,0-.3-.13.09-.21.24-.23.28,0,.3.13Zm0,0" />
-                        </svg>
-                    </button>
-                    <button type="button" class="icon_container animated_social_btn href_btn" link-ref="https://wa.me/525614207862?text=Necesito%20información%20sobre%20tus%20servicios.">
-                        <svg class="icon_svg social_icon_svg wa_icon_svg" name="wa_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
-                            <title>WhatsApp</title>
-                            <path
-                                class="cls-1"
-                                d="M7.253 18.494l.724.423A7.953 7.953 0 0 0 12 20a8 8 0 1 0-8-8c0 1.436.377 2.813 1.084 4.024l.422.724-.653 2.401 2.4-.655zM2.004 22l1.352-4.968A9.954 9.954 0 0 1 2 12C2 6.477 6.477 2 12 2s10 4.477 10 10-4.477 10-10 10a9.954 9.954 0 0 1-5.03-1.355L2.004 22zM8.391 7.308c.134-.01.269-.01.403-.004.054.004.108.01.162.016.159.018.334.115.393.249.298.676.588 1.357.868 2.04.062.152.025.347-.093.537a4.38 4.38 0 0 1-.263.372c-.113.145-.356.411-.356.411s-.099.118-.061.265c.014.056.06.137.102.205l.059.095c.256.427.6.86 1.02 1.268.12.116.237.235.363.346.468.413.998.75 1.57 1l.005.002c.085.037.128.057.252.11.062.026.126.049.191.066a.35.35 0 0 0 .367-.13c.724-.877.79-.934.796-.934v.002a.482.482 0 0 1 .378-.127c.06.004.121.015.177.04.531.243 1.4.622 1.4.622l.582.261c.098.047.187.158.19.265.004.067.01.175-.013.373-.032.259-.11.57-.188.733a1.155 1.155 0 0 1-.21.302 2.378 2.378 0 0 1-.33.288 3.71 3.71 0 0 1-.125.09 5.024 5.024 0 0 1-.383.22 1.99 1.99 0 0 1-.833.23c-.185.01-.37.024-.556.014-.008 0-.568-.087-.568-.087a9.448 9.448 0 0 1-3.84-2.046c-.226-.199-.435-.413-.649-.626-.89-.885-1.562-1.84-1.97-2.742A3.47 3.47 0 0 1 6.9 9.62a2.729 2.729 0 0 1 .564-1.68c.073-.094.142-.192.261-.305.127-.12.207-.184.294-.228a.961.961 0 0 1 .371-.1z"
-                            />
                         </svg>
                     </button>
                 </div>
@@ -332,18 +323,6 @@
                         </svg>
                     </div>
                 </button>
-                <button type="button" class="phone_social_btn phone_menu_btn action_menu extra_btn href_btn" link-ref="https://wa.me/525614207862?text=Necesito%20información%20sobre%20tus%20servicios.">
-                    <div class="icon_container">
-                        <svg class="social_icon_svg wa_icon_svg icon_svg" name="wa_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
-                            <title>WhatsApp</title>
-                            <path
-                                class="cls-1"
-                                d="M20.41,15.84c-.09-.15-.34-.24-.71-.43s-1.37-.68-2-1h0l-.47-.2a.71.71,0,0,0-.91.27,15.2,15.2,0,0,1-1,1.31.78.78,0,0,1-.89.14,9.2,9.2,0,0,1-3-1.83,11.48,11.48,0,0,1-2-2.54.6.6,0,0,1-.09-.36.8.8,0,0,1,.24-.43c.18-.23.36-.39.55-.61a2.35,2.35,0,0,0,.41-.58.41.41,0,0,0,.05-.18.9.9,0,0,0-.1-.5c-.09-.19-.84-2-1.14-2.73A2,2,0,0,0,9.22,6h0a.65.65,0,0,0-.71-.43H8.08A1.85,1.85,0,0,0,6.79,6,4,4,0,0,0,5.5,9.06v0h0c0,.05,0,.11,0,.17h0A7.38,7.38,0,0,0,7,12.87c.19.25,2.58,4,6.29,5.56a9.72,9.72,0,0,0,3.8,1h0a3.35,3.35,0,0,0,.61-.08,3.55,3.55,0,0,0,2.48-1.78c0-.12.08-.24.11-.35s0-.06,0-.09l.06-.24s0-.05,0-.07a2,2,0,0,0,0-.24v0c0-.08,0-.17,0-.24h0A1.15,1.15,0,0,0,20.41,15.84Z"
-                            />
-                            <path class="cls-1" d="M13,.48A12,12,0,0,0,2.28,18L0,24.5l6.63-1.81A12,12,0,1,0,13,.48Zm0,22.43A10.41,10.41,0,1,1,23.39,12.5,10.41,10.41,0,0,1,13,22.91Z" />
-                        </svg>
-                    </div>
-                </button>
                 <button class="phone_social_btn contact_btn phone_menu_btn action_menu extra_btn" tabindex="0">
                     <div class="icon_container">
                         <svg class="social_icon_svg contact_icon_svg icon_svg" name="contact_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 18">
@@ -456,17 +435,6 @@
                             <path class="cls-2" d="M7.34,20.64c0,.1-.17.14-.31.1s-.24-.16-.21-.26.17-.14.32-.1.23.16.2.26Zm0,0" />
                             <path class="cls-2" d="M8.36,20.71c0,.11-.11.19-.26.2s-.27-.08-.27-.19.11-.19.26-.19.27.08.27.18Zm0,0" />
                             <path class="cls-2" d="M9.32,20.55c0,.1-.09.21-.24.23s-.28,0-.3-.13.09-.21.24-.23.28,0,.3.13Zm0,0" />
-                        </svg>
-                    </div>
-                </button>
-                <button type="button" class="social_menu_btn social_btn href_btn" link-ref="https://wa.me/525614207862?text=Necesito%20información%20sobre%20tus%20servicios.">
-                    <div class="icon_container">
-                        <svg class="icon_svg social_icon_svg wa_icon_svg" name="wa_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
-                            <title>WhatsApp</title>
-                            <path
-                                class="cls-1"
-                                d="M7.253 18.494l.724.423A7.953 7.953 0 0 0 12 20a8 8 0 1 0-8-8c0 1.436.377 2.813 1.084 4.024l.422.724-.653 2.401 2.4-.655zM2.004 22l1.352-4.968A9.954 9.954 0 0 1 2 12C2 6.477 6.477 2 12 2s10 4.477 10 10-4.477 10-10 10a9.954 9.954 0 0 1-5.03-1.355L2.004 22zM8.391 7.308c.134-.01.269-.01.403-.004.054.004.108.01.162.016.159.018.334.115.393.249.298.676.588 1.357.868 2.04.062.152.025.347-.093.537a4.38 4.38 0 0 1-.263.372c-.113.145-.356.411-.356.411s-.099.118-.061.265c.014.056.06.137.102.205l.059.095c.256.427.6.86 1.02 1.268.12.116.237.235.363.346.468.413.998.75 1.57 1l.005.002c.085.037.128.057.252.11.062.026.126.049.191.066a.35.35 0 0 0 .367-.13c.724-.877.79-.934.796-.934v.002a.482.482 0 0 1 .378-.127c.06.004.121.015.177.04.531.243 1.4.622 1.4.622l.582.261c.098.047.187.158.19.265.004.067.01.175-.013.373-.032.259-.11.57-.188.733a1.155 1.155 0 0 1-.21.302 2.378 2.378 0 0 1-.33.288 3.71 3.71 0 0 1-.125.09 5.024 5.024 0 0 1-.383.22 1.99 1.99 0 0 1-.833.23c-.185.01-.37.024-.556.014-.008 0-.568-.087-.568-.087a9.448 9.448 0 0 1-3.84-2.046c-.226-.199-.435-.413-.649-.626-.89-.885-1.562-1.84-1.97-2.742A3.47 3.47 0 0 1 6.9 9.62a2.729 2.729 0 0 1 .564-1.68c.073-.094.142-.192.261-.305.127-.12.207-.184.294-.228a.961.961 0 0 1 .371-.1z"
-                            />
                         </svg>
                     </div>
                 </button>
@@ -755,15 +723,6 @@
                                 <path class="cls-2" d="M9.32,20.55c0,.1-.09.21-.24.23s-.28,0-.3-.13.09-.21.24-.23.28,0,.3.13Zm0,0" />
                             </svg>
                         </button>
-                        <button type="button" class="icon_container animated_social_btn href_btn" link-ref="https://wa.me/525614207862?text=Necesito%20información%20sobre%20tus%20servicios.">
-                            <svg class="icon_svg social_icon_svg wa_icon_svg" name="wa_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
-                                <title>WhatsApp</title>
-                                <path
-                                    class="cls-1"
-                                    d="M7.253 18.494l.724.423A7.953 7.953 0 0 0 12 20a8 8 0 1 0-8-8c0 1.436.377 2.813 1.084 4.024l.422.724-.653 2.401 2.4-.655zM2.004 22l1.352-4.968A9.954 9.954 0 0 1 2 12C2 6.477 6.477 2 12 2s10 4.477 10 10-4.477 10-10 10a9.954 9.954 0 0 1-5.03-1.355L2.004 22zM8.391 7.308c.134-.01.269-.01.403-.004.054.004.108.01.162.016.159.018.334.115.393.249.298.676.588 1.357.868 2.04.062.152.025.347-.093.537a4.38 4.38 0 0 1-.263.372c-.113.145-.356.411-.356.411s-.099.118-.061.265c.014.056.06.137.102.205l.059.095c.256.427.6.86 1.02 1.268.12.116.237.235.363.346.468.413.998.75 1.57 1l.005.002c.085.037.128.057.252.11.062.026.126.049.191.066a.35.35 0 0 0 .367-.13c.724-.877.79-.934.796-.934v.002a.482.482 0 0 1 .378-.127c.06.004.121.015.177.04.531.243 1.4.622 1.4.622l.582.261c.098.047.187.158.19.265.004.067.01.175-.013.373-.032.259-.11.57-.188.733a1.155 1.155 0 0 1-.21.302 2.378 2.378 0 0 1-.33.288 3.71 3.71 0 0 1-.125.09 5.024 5.024 0 0 1-.383.22 1.99 1.99 0 0 1-.833.23c-.185.01-.37.024-.556.014-.008 0-.568-.087-.568-.087a9.448 9.448 0 0 1-3.84-2.046c-.226-.199-.435-.413-.649-.626-.89-.885-1.562-1.84-1.97-2.742A3.47 3.47 0 0 1 6.9 9.62a2.729 2.729 0 0 1 .564-1.68c.073-.094.142-.192.261-.305.127-.12.207-.184.294-.228a.961.961 0 0 1 .371-.1z"
-                                />
-                            </svg>
-                        </button>
                     </div>
                 </div>
             </div>
@@ -1015,18 +974,6 @@
                         <p class="form_response"></p>
                     </div>
                 </form>
-                <button type="button" class="btn whatsapp_btn animated_social_btn href_btn" link-ref="https://wa.me/525614207862?text=Necesito%20información%20sobre%20tus%20servicios.">
-                    <span class="label_btn">WhatsApp</span>
-                    <span class="icon_container">
-                        <svg class="icon_svg social_icon_svg wa_icon_svg" name="wa_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
-                            <title>WhatsApp</title>
-                            <path
-                                class="cls-1"
-                                d="M7.253 18.494l.724.423A7.953 7.953 0 0 0 12 20a8 8 0 1 0-8-8c0 1.436.377 2.813 1.084 4.024l.422.724-.653 2.401 2.4-.655zM2.004 22l1.352-4.968A9.954 9.954 0 0 1 2 12C2 6.477 6.477 2 12 2s10 4.477 10 10-4.477 10-10 10a9.954 9.954 0 0 1-5.03-1.355L2.004 22zM8.391 7.308c.134-.01.269-.01.403-.004.054.004.108.01.162.016.159.018.334.115.393.249.298.676.588 1.357.868 2.04.062.152.025.347-.093.537a4.38 4.38 0 0 1-.263.372c-.113.145-.356.411-.356.411s-.099.118-.061.265c.014.056.06.137.102.205l.059.095c.256.427.6.86 1.02 1.268.12.116.237.235.363.346.468.413.998.75 1.57 1l.005.002c.085.037.128.057.252.11.062.026.126.049.191.066a.35.35 0 0 0 .367-.13c.724-.877.79-.934.796-.934v.002a.482.482 0 0 1 .378-.127c.06.004.121.015.177.04.531.243 1.4.622 1.4.622l.582.261c.098.047.187.158.19.265.004.067.01.175-.013.373-.032.259-.11.57-.188.733a1.155 1.155 0 0 1-.21.302 2.378 2.378 0 0 1-.33.288 3.71 3.71 0 0 1-.125.09 5.024 5.024 0 0 1-.383.22 1.99 1.99 0 0 1-.833.23c-.185.01-.37.024-.556.014-.008 0-.568-.087-.568-.087a9.448 9.448 0 0 1-3.84-2.046c-.226-.199-.435-.413-.649-.626-.89-.885-1.562-1.84-1.97-2.742A3.47 3.47 0 0 1 6.9 9.62a2.729 2.729 0 0 1 .564-1.68c.073-.094.142-.192.261-.305.127-.12.207-.184.294-.228a.961.961 0 0 1 .371-.1z"
-                            />
-                        </svg>
-                    </span>
-                </button>
             </div>
         </section>
 
