--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <link rel="canonical" href="https://johnmckrazy.github.io/JohnK_Portafolio/" />
         <link rel="stylesheet" href="./src/css/style.min.css" />
     </head>
-    <body class="dark">
+    <body color-scheme="dark">
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
